--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".ui.VideoFragment"
              android:background="@android:color/black">
 
     <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/simpleExoPlayerView"
+            android:id="@+id/pvExoPlayer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        <!--<SurfaceView-->
-        <!--android:id="@+id/mSurfaceView"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp"/>-->
+            android:layout_height="match_parent"
+            app:resize_mode="fixed_width">
+
     </com.google.android.exoplayer2.ui.PlayerView>
 
     <include
