--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -74,17 +74,16 @@
             android:layout_marginBottom="8dp"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            tools:text="Rampage"
-            android:textStyle="bold"
-            android:textSize="32sp"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toTopOf="@+id/txtDislike"
-            app:layout_constraintStart_toStartOf="@+id/txtDislike"
-    />
+        android:id="@+id/txtTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:textColor="@android:color/white"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/txtDislike"
+        app:layout_constraintStart_toStartOf="@+id/txtDislike"
+        tools:text="Rampage" />
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycImages"
