UI Restored and returned Only Retrofit

--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -1,150 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:contentScrim="@color/colorPrimary"
-                app:titleEnabled="false">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">
 
             <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    app:layout_collapseMode="parallax"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_android"/>
+                android:id="@+id/imgSeriesVideo"
+                android:layout_width="match_parent"
+                android:layout_height="256dp"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                tools:src="@drawable/ic_android" />
 
             <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                    app:title="Mother!"/>
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:title="Miraç Ozkan!" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.core.widget.NestedScrollView
-            android:id="@+id/scrollView"
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/detail_bg"
+        android:clipToPadding="false"
+        android:paddingTop="32dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:paddingTop="32dp"
-            android:clipToPadding="false"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <LinearLayout
+            <TextView
+                android:id="@+id/txtSeriesName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:textColor="#ffffff"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Mother!" />
+
+            <TextView
+                android:id="@+id/txtSeriesInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffffff"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/txtSeriesName"
+                app:layout_constraintTop_toBottomOf="@+id/txtSeriesName"
+                tools:text="@string/tur" />
+
+            <TextView
+                android:id="@+id/txtSeriesWritter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffffff"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/txtSeriesInfo"
+                app:layout_constraintTop_toBottomOf="@+id/txtSeriesInfo"
+                tools:text="yazarlar" />
+
+            <TextView
+                android:id="@+id/txtStoryLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textColor="#ffffff"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/txtSeriesWritter"
+                app:layout_constraintTop_toBottomOf="@+id/txtSeriesWritter"
+                tools:text="@string/dizi_erik" />
+
+            <TextView
+                android:id="@+id/txtStoryLineDesc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:textColor="#ffffff"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/txtStoryLine"
+                app:layout_constraintTop_toBottomOf="@+id/txtStoryLine"
+                tools:text="E/AppScanObserverService: Result available, null observers for user: 0E/AppScanObserverService: Result available, null observers for user: 0
+                E/AppScanObserverService: Result available, null observers for user: 0E/AppScanObserverService: Result available, null observers for user: 0
+                E/AppScanObserverService: Result available, null observers for user: 0E/AppScanObserverService: Result available, null observers for user: 0" />
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tblSeriesDetailTitle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="16dp"
-                android:orientation="vertical">
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtStoryLineDesc"
+                app:tabTextColor="@android:color/white" />
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#ffffff"
-                    android:text="Mother!"
-                    android:textSize="22sp"
-                    android:textStyle="bold"/>
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/vpSeriesDetail"
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tblSeriesDetailTitle" />
 
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#ffffff"
-                    android:layout_marginTop="24dp"
-                    android:text="sadasdasdasdasdasd"
-                    android:textSize="17sp"/>
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
 
     <iammert.com.view.scalinglib.ScalingLayout
-            android:id="@+id/scalingLayout"
-            android:layout_width="300dp"
-            android:layout_height="48dp"
-            app:radiusFactor="1"
-            android:clickable="true"
-            android:layout_gravity="center_horizontal"
-            android:stateListAnimator="@animator/sl_state_animator"
-            app:layout_behavior="iammert.com.view.scalinglib.ScalingLayoutBehavior"
-            android:focusable="true">
+        android:id="@+id/scalingLayout"
+        android:layout_width="300dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center_horizontal"
+        android:clickable="true"
+        android:focusable="true"
+        android:stateListAnimator="@animator/sl_state_animator"
+        app:layout_behavior="iammert.com.view.scalinglib.ScalingLayoutBehavior"
+        app:radiusFactor="1">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/colorAccent"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:gravity="center"
-                android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
 
             <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center">
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
-                        android:id="@+id/imageViewWatchNow"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_android"/>
+                    android:id="@+id/imageViewWatchNow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_share" />
 
                 <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_toEndOf="@+id/imageViewWatchNow"
-                        android:gravity="center"
-                        android:text="Watch Now"
-                        android:layout_marginStart="8dp"
-                        android:textColor="#ffffff"
-                        android:singleLine="true"
-                        android:textSize="18sp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_toEndOf="@+id/imageViewWatchNow"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="@string/web_sitesi"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
             <RelativeLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center">
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center">
 
                 <ImageView
-                        android:id="@+id/imageViewWatchLater"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_android"/>
+                    android:id="@+id/imageViewWatchLater"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_add" />
 
                 <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/imageViewWatchLater"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginBottom="0dp"
-                        android:layout_toEndOf="@+id/imageViewWatchLater"
-                        android:gravity="center"
-                        android:singleLine="true"
-                        android:text="Remind Later"
-                        android:textColor="#ffffff"
-                        android:textSize="18sp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/imageViewWatchLater"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toEndOf="@+id/imageViewWatchLater"
+                    android:gravity="center"
+                    android:singleLine="true"
+                    android:text="@string/listeye_ekle"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
