--- a/app/src/main/res/layout/adapter_item_cast.xml
+++ b/app/src/main/res/layout/adapter_item_cast.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/review_bg"
     android:orientation="vertical">
 
     <ImageView
