--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="detail_bg">#232323</color>
     <color name="review_bg">#444</color>
+    <color name="background">#dddddd</color>
 </resources>
